# forte

./: .gitignore  CMakeLists.txt  README.md  Technical specification.md  code_analyzer.cpp  command_handler.cpp  command_handler.h  main.cpp  server.cpp  server.h  test_client.cpp  test_commands.xml  use-case_tests.puml  ПМИ.md
